--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
+server.port = 8084
 
 spring.datasource.url=jdbc:mysql://localhost:3306/meetup?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Kaloryfer123456
-
+spring.datasource.password=t{2k$P&m]~))vnrh
 # Hibernate
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
